kubernetes-networks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: homework
  labels:
    app: web
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      volumes:
        - name: app-volume
          emptyDir: { }
        - name: config-volume
          configMap:
            name: nginx-config
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 8000
          volumeMounts:
            - mountPath: /homework
              name: app-volume
            - mountPath: /etc/nginx/conf.d
              name: config-volume
          readinessProbe:
            httpGet:
              port: 8000
              path: '/index.html'

          lifecycle:
            preStop:
              exec:
                command: [ "rm", "-rf", "/homework/*" ]
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
